--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit>=1.50.0
-opencv-python>=4.8.0
-mediapipe>=0.10.0
-numpy<2.0.0
-protobuf<4.0.0
+streamlit==1.50.0
+opencv-python-headless==4.12.0.88
+mediapipe==0.10.21
+numpy
