--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.50.0
-opencv-python-headless==4.12.0.88
+opencv-python-headless==4.7.0.72
 mediapipe==0.10.21
-numpy
+streamlit==1.50.0
+numpy==1.25.0
